--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.131" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.131" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Main">
    <center>
       <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <content>
@@ -23,9 +22,9 @@
    <bottom>
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
-          <Button mnemonicParsing="false" text="+" />
-            <Button mnemonicParsing="false" text="-" />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Go" />
+          <Button fx:id="plusButton" mnemonicParsing="false" onAction="#addThingIDontKnow" text="+" />
+            <Button fx:id="minusButton" mnemonicParsing="false" onAction="#removeThingIDontKnow" text="-" />
+            <Button fx:id="goButton" mnemonicParsing="false" onAction="#doThingIDontKnow" prefHeight="25.0" prefWidth="70.0" text="Go" />
         </items>
       </ToolBar>
    </bottom>
