--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -13,7 +13,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="358.0" prefWidth="597.0">
                <children>
-                  <ListView prefHeight="358.0" prefWidth="600.0" />
+                  <ListView fx:id="listView" prefHeight="358.0" prefWidth="600.0" />
                </children>
             </AnchorPane>
         </content>
